@@ -20,6 +20,8 @@ JEDIT 4.0 VERSION HISTORY
 - Status bar message shown while mouse was hovering over a macro menu
   item wasn't hidden after the menu item was selected
 - Fixed another soft wrap bug with syntax highlighting
+- Middle-mouse-drag (quick copy) failed if the selected region ended or
+  began at the caret position
 
 + API Changes
 
